@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-06T16:29:42Z",
-  "count_outdated" : 712,
-  "uniques_outdated" : 371,
-  "count" : 745,
+  "timestamp" : "2022-08-07T02:18:34Z",
+  "count_outdated" : 714,
+  "uniques_outdated" : 372,
+  "count" : 746,
   "uniques" : 388,
   "clones" : [
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 2,
